--- a/exploration_modelling.qmd
+++ b/exploration_modelling.qmd
@@ -9,14 +9,23 @@ editor: visual
 ### 1.1 Install Libraries
 
 ```{r}
-install.packages(c('tidyverse', 'skimr'))
+install.packages(c('tidyverse', 'skimr', 'corrplot', 'janitor', 'tidymodels',
+                   'randomForest', 'caret', 'rpart', 'rpart.plot'))
 ```
 
 ### 1.2 Load Libraries
 
 ```{r}
 library(tidyverse)          
-library(skimr)                
+library(skimr)    
+library(corrplot)
+library(janitor)
+library(tidymodels)
+library(randomForest)
+library(caret)
+library(rpart)      
+library(rpart.plot)
+
 ```
 
 ## 2. Load Data
@@ -33,7 +42,7 @@ head(df)
 
 ## 3. Data Exploration
 
-### 3.1. Data Inspection
+### 3.1. Data Overview
 
 #### Column Names
 
@@ -59,253 +68,144 @@ glimpse(df)
 skim(df)
 ```
 
-### 3.2 Data Distributions
+### 3.2 Minimal EDA
 
 #### Target Variable: Churn
 
 ```{r}
-count(df, churn)
+df %>% 
+  count(churn)
+```
+
+#### Correlation
+
+```{r}
+numeric_df <- df %>% 
+  select(where(is.numeric))
+
+cor_matrix <- cor(numeric_df)
+
+corrplot(cor_matrix,
+         method = 'color',
+         type = 'upper',
+         tl.col = 'black',
+         tl.cex = 0.5)
+```
+
+#### Simple Churn Comparrison
+
+```{r}
+df %>% 
+  group_by(churn) %>% 
+  summarise(across(where(is.numeric), mean))
+```
+
+## 4. Data Manipulation
+
+### 4.1 Clean Data Types
+
+```{r}
+df <- df %>%
+  mutate(
+    churn = factor(churn),
+    gender = factor(gender),
+    region = factor(region),
+    income_level = factor(income_level),
+    subscription_type = factor(subscription_type),
+    payment_method = factor(payment_method),
+    contract_type = factor(contract_type),
+    promotional_response = factor(promotional_response),
+    discount_used = factor(discount_used),
+    usage_frequency = factor(usage_frequency)
+  )
+
+```
+
+### 4.2 Drop Redundant Variables
+
+-   `customer_id` adds no value to the model so can be removed.
+
+-   `total_charges` shows a strong correlation with `montly_charges`. To prevent multicolinarity, `total_charges` is removed before modelling.
+
+-   `signup_data` adds no significant value to the model as `tenure_months` is more valuable.
+
+```{r}
+df <- df %>% 
+  select(-customer_id, -total_charges, -signup_date)
+```
+
+## 4.3 Split Data
+
+Split the data into a training set and a test set
+
+```{r}
+set.seed(1998)
+
+churn_split <- initial_split(df, prop = 0.8, strata = churn)
+churn_train <- training(churn_split)
+churn_test <- testing(churn_split)
+```
+
+Check if proportions in training and testing data are similar to complete dataset
+
+```{r}
+count(churn_train, churn) %>% 
+  mutate(prop = round(n/sum(n),2))
 ```
 
 ```{r}
-# Check for class imbalance
-prop.table(table(df$churn))
+count(churn_test, churn) %>% 
+  mutate(prop = round(n/sum(n),2))
 ```
 
-#### Core Numeric Variables
+Both sets show the same proportion of churn and not churns. The split should fit the training and testing process.
 
-##### Tenure Months
+## 5. Modelling
 
-```{r}
-ggplot(df, aes(x = tenure_months)) +
-  geom_histogram(bins = 30, fill = "steelblue", color = "white") +
-  labs(
-    title = "Distribution of Customer Tenure",
-    x = "Tenure (months)",
-    y = "Count"
-  ) +
-  theme_minimal()
-```
-
-##### Average Session Duration
+### 5.1 Logistic Regression
 
 ```{r}
-ggplot(df, aes(x = avg_session_duration_minutes)) +
-  geom_histogram(bins = 30, fill = "steelblue", color = "white") +
-  labs(
-    title = "Distribution of Customer Average Session Duration",
-    x = "Duration (minutes)",
-    y = "Count"
-  ) +
-  theme_minimal()
-```
+model1 <- glm(churn ~ .,
+              data   = churn_train,
+              family = binomial(link = 'logit'))
 
-##### Number of Logins per Month
+pred <- predict(model1 , newdata = churn_test, type = 'response')
 
-```{r}
-ggplot(df, aes(x = number_of_logins_per_month)) +
-  geom_histogram(bins = 30, fill = "steelblue", color = "white") +
-  labs(
-    title = "Distribution of Number of Logins per Month",
-    x = "Number of Logins per Month",
-    y = "Count"
-  ) +
-  theme_minimal()
-```
+# Convert probs to binary
+pred <- as.factor(ifelse(pred > 0.5, 1, 0))
 
-##### Number of Support Tickets
+# Evaluation Metrics
+result    <- confusionMatrix(data = pred, churn_test$churn)
+precision <- result$byClass['Pos Pred Value']
+recall    <- result$byClass['Sensitivity']
+F1        <- result$byClass['F1']
 
-```{r}
-ggplot(df, aes(x = number_of_support_tickets)) +
-  geom_histogram(bins = 30, fill = "steelblue", color = "white") +
-  labs(
-    title = "Distribution of Number of Support Tickets",
-    x = "Number of Support Tickets",
-    y = "Count"
-  ) +
-  theme_minimal()
-```
-
-##### Last Login Days Ago
-
-```{r}
-ggplot(df, aes(x = last_login_days_ago)) +
-  geom_histogram(bins = 30, fill = "steelblue", color = "white") +
-  labs(
-    title = "Distribution of Last Login Days Ago",
-    x = "Last Login Days Ago",
-    y = "Count"
-  ) +
-  theme_minimal()
-```
-
-##### Monthly Charges
-
-```{r}
-ggplot(df, aes(x = monthly_charges)) +
-  geom_histogram(bins = 30, fill = "steelblue", color = "white") +
-  labs(
-    title = "Distribution of Monthly Charges",
-    x = "Monthly Charges",
-    y = "Count"
-  ) +
-  theme_minimal()
-```
-
-##### Total Charges
-
-```{r}
-ggplot(df, aes(x = total_charges)) +
-  geom_histogram(bins = 30, fill = "steelblue", color = "white") +
-  labs(
-    title = "Distribution of Total Charges",
-    x = "Total Charges",
-    y = "Count"
-  ) +
-  theme_minimal()
-```
-
-##### Age
-
-```{r}
-ggplot(df, aes(x = age)) +
-  geom_histogram(bins = 30, fill = "steelblue", color = "white") +
-  labs(
-    title = "Distribution of Customer Age",
-    x = "Age",
-    y = "Count"
-  ) +
-  theme_minimal()
-```
-
-#### Categorical Variables
-
-##### Subscription Type
-
-```{r}
-df %>% count(subscription_type)
-```
-
-##### Contract Type
-
-```{r}
-df %>% count(contract_type)
-```
-
-##### Income Level
-
-```{r}
-df %>% count(income_level)
-```
-
-##### Region
-
-```{r}
-df %>% count(region)
-```
-
-##### Payment Method
-
-```{r}
-df %>% count(payment_method)
-```
-
-##### Promotional Response
-
-```{r}
-df %>% count(promotional_response)
-```
-
-##### Discount Used
-
-```{r}
-df %>% count(discount_used)
-```
-
-##### Usage Frequency
-
-```{r}
-df %>% count(usage_frequency)
-```
-
-##### Gender
-
-```{r}
-df %>% count(gender)
-```
-
-#### Special: Signup Date
-
-```{r}
-summary(df$signup_date)
 ```
 
 ```{r}
-ggplot(df, aes(x = as.Date(signup_date))) +
-  geom_histogram(bins = 30, fill = "steelblue", color = "white") +
-  labs(
-    title = "Distribution of Signup Dates",
-    x = "Signup Date",
-    y = "Count"
-  ) +
-  theme_minimal()
+result
 ```
 
-#### Bivariate Analysis: Key Variables by Churn
-
-##### Tenure by Churn
+### 5.2 Decision Tree
 
 ```{r}
-ggplot(df, aes(x = tenure_months, fill = factor(churn))) +
-  geom_histogram(position = "identity", alpha = 0.5) +
-  labs(
-    title = "Tenure Distribution by Churn",
-    x = "Tenure (months)",
-    y = "Count",
-    fill = "Churn"
-  ) +
-  theme_minimal()
+tree_model <- rpart(churn ~ .,
+                    data = churn_train,
+                    method = "class",
+                    control = rpart.control(xval = 10))
+
+# Plot
+rpart.plot(tree_model)
 ```
 
-##### Average Session Duration by Churn
-
 ```{r}
-ggplot(df, aes(x = avg_session_duration_minutes, fill = factor(churn))) +
-  geom_histogram(position = "identity", alpha = 0.5) +
-  labs(
-    title = "Average Session Duration by Churn",
-    x = "Duration (minutes)",
-    y = "Count",
-    fill = "Churn"
-  ) +
-  theme_minimal()
+pred      <- predict(tree_model, newdata = churn_test, type = "class")
+result    <- confusionMatrix(data = pred, churn_test$churn)
+precision <- result$byClass['Pos Pred Value']
+recall    <- result$byClass['Sensitivity']
+F1        <- result$byClass['F1']
 ```
 
-##### Number of Logins by Churn
-
 ```{r}
-ggplot(df, aes(x = number_of_logins_per_month, fill = factor(churn))) +
-  geom_histogram(position = "identity", alpha = 0.5) +
-  labs(
-    title = "Number of Logins per Month by Churn",
-    x = "Number of Logins per Month",
-    y = "Count",
-    fill = "Churn"
-  ) +
-  theme_minimal()
-```
-
-##### Contract Type by Churn
-
-```{r}
-df %>% count(contract_type, churn) %>% 
-  ggplot(aes(x = contract_type, y = n, fill = factor(churn))) +
-  geom_bar(stat = "identity", position = "dodge") +
-  labs(
-    title = "Contract Type by Churn",
-    x = "Contract Type",
-    y = "Count",
-    fill = "Churn"
-  ) +
-  theme_minimal()
+result
 ```
